# Android-JNI-Samples

app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/android/karthick/hellojni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/karthick/hellojni/: HelloJniActivity.java
app/src/test/java/com/android/karthick/hellojni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native-lib/: README.md
native-lib/jni/: Android.mk  CMakeLists.txt  hello-jni.c
native-lib/jni/inc/: hello-jni.h
native-lib/jni/src/: hello-jni.c
